fixing wrap

--- a/src/client/grid/css/flex/nitobi.grid.css
+++ b/src/client/grid/css/flex/nitobi.grid.css
@@ -77,8 +77,7 @@
 /* this determines the behaviour of the top row */
 .flex .ntb-column-indicator { 
 	padding: 0px 5px;
-	overflow: hidden;
-	white-space: normal;
+	white-space: nowrap;
 }
 
 .flex .ntb-column-indicator-border,
